- Đơn theo ngành

--- a/base-web-umi/src/pages/Admin/University/Detail/components/ApplicationsManagement/index.less
+++ b/base-web-umi/src/pages/Admin/University/Detail/components/ApplicationsManagement/index.less
@@ -127,4 +127,18 @@
       }
     }
   }
+}
+
+.groupedApplications {
+  .panelHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+    .majorName {
+      font-size: 16px;
+      font-weight: 500;
+    }
+  }
 } 
